--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 flask==2.3.2
 flask-sqlalchemy==3.0.3
+flask-migrate==4.0.5
+alembic==1.13.1
 gunicorn==20.1.0
-flask-migrate==4.0.5  # <-- THIS IS CRUCIAL
