--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-flask==2.3.2
-flask-sqlalchemy==3.0.3
-flask-migrate==4.0.5
-alembic==1.13.1
-gunicorn==20.1.0
+blinker==1.9.0
+click==8.2.1
+colorama==0.4.6
+Flask==3.1.1
+Flask-SQLAlchemy==3.1.1
+flask-migrate==4.0.5  # MUST HAVE THIS
+alembic==1.13.1  
+greenlet==3.2.3
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+SQLAlchemy==2.0.41
+typing_extensions==4.14.0
+Werkzeug==3.1.3
+gunicorn
